"Fixed the logic for the getNext method of the RoundRobin class, given the changes in the scheduler"